...
    //    @State private var featureForm: FeatureForm?
    //
    //    /// The point on the screen the user tapped on to identify a feature.
    //    @State private var identifyScreenPoint: CGPoint?
    //
    // #warning("TO BE UNDONE. For UN testing only.")
    //    /// The `Map` displayed in the `MapView`.
    //    @State private var map = makeMap()
    ////    @State private var map = Map(url: .sampleData)!
    
    /// The form view model provides a channel of communication between the form view and its host.
    //    @StateObject private var model = Model()
    
...
                        .multilineTextAlignment(.center)
                        .padding(.top)
                }
            }
            .italic()
            HStack {
                Button("Discard", systemImage: "point.topleft.down.to.point.bottomright.curvepath") {
                    // Start Geometry Editing
                    //                editorType.wrappedValue = .geometry
                    discard()
                }
                .labelStyle(.titleOnly)
                .disabled(!hasEdits && !geometryChanged)
...
                //            }
                //            .labelStyle(.iconOnly)
                //            .buttonStyle(.borderedProminent)
                //            .buttonBorderShape(.roundedRectangle)
                //            .font(.title)
                //            Spacer()
                Button("Save", systemImage: "list.bullet.rectangle.portrait") {
                    // Start Attribute Editing
                    //                editorType.wrappedValue = .attributes
                    save()
                }
                .disabled(!hasEdits && !geometryChanged)
                .labelStyle(.titleOnly)
...
