...
        onCancel: @escaping () -> Void
    ) -> some View {
        alert("Certificate Required", isPresented: isPresented, presenting: host) { _ in
            Button("Browse For Certificate") {
                onContinue()
            }
            Button("Cancel", role: .cancel) {
                onCancel()
            }
        } message: { _ in
            Text("A certificate is required to access content on \(host).")
        }
    }
...
    }
    
    private var okButton: some View {
        Button(action: {
            onContinue()
        }, label: {
            Text("OK")
                .frame(maxWidth: .infinity, alignment: .center)
                .foregroundColor(.white)
        })
            .disabled(!password.isEmpty)
            .listRowBackground(!password.isEmpty ? Color.accentColor : Color.gray)
    }
...
